# useful

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
useful/: avfilter.lib  clip.aac  clip2.aac  concat_audio_video.cpp  ffmpeg_example.cpp  jingwei.aac  main.cpp  muxer.cpp  muxer.h  play_audio.cpp  play_video.cpp  swresample.lib  test.cpp  test2.cpp  test_serial.c
